--- a/index.css
+++ b/index.css
@@ -453,8 +453,46 @@ nav a {
   margin: 0 5px;
 }
 
+#contact .email-text {
+  margin: 0 auto;
+  padding: 0.3rem 2rem;
+  border-radius: 5px;
+  background: #000000;
+  width: fit-content;
+  max-width: 70%;
+}
+
+#contact .email-text .email {
+  margin: 0 0.3rem;
+  cursor: pointer;
+  background: #000000;
+  border: none;
+  outline: none;
+  color: #fff;
+  width: fit-content;
+}
+
+#contact .email-text .info {
+  color: var(--headingSecondaryColor);
+  display: none;
+  margin: 0 0.1rem;
+}
+
 #contact .or {
   margin: 1rem auto;
+}
+
+#contact .submit-message {
+  margin: 0 auto;
+  font-size: 1.5rem;
+  width: max-content;
+  color: #b9ff99;
+  padding: 1rem 3rem;
+  font-weight: 500;
+  border-radius: 10px;
+  background-color: #05a11f;
+  display: none;
+  transition: 0.5s ease-out filter;
 }
 
 #contact form {
