--- a/index.css
+++ b/index.css
@@ -261,7 +261,7 @@ header nav ul .resumeButton {
   position: relative;
   border-radius: 50%;
   background-color: #7363ff;
-  background: url(./assets/images/Hero.jpg);
+  background: url(./assets/images/myPic.jpg);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
