--- a/index.css
+++ b/index.css
@@ -467,7 +467,7 @@ header nav ul .resumeButton {
   margin: 0 auto;
   border-radius: 5px;
   background: #000000;
-  width: fit-content;
+  width: max-content;
   max-width: 70%;
   transition: 0.3s ease-in-out;
   transition-property: translate, width;
@@ -480,7 +480,7 @@ header nav ul .resumeButton {
   border: none;
   outline: none;
   color: #fff;
-  width: fit-content;
+  width: 12rem;
   display: block;
 }
 
