--- a/index.css
+++ b/index.css
@@ -664,6 +664,7 @@ footer {
     width: 100vw;
     height: 100vh;
     background-color: var(--containerMainColor);
+    backdrop-filter: blur(5px);
     transition: 0.3s cubic-bezier(0, 1, 0.73, 0.96);
     transition-property: clip-path;
     clip-path: circle(8% at 100% 0%);
